Fix some words in english translation

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -6,12 +6,12 @@
   "signin": "Sign In",
   "userinfo": "User Info",
   "logout": "Log Out",
-  "contact": "Call us",
-  "greeting-banner": "Welcome to out online shop",
-  "contact-throught": "Call us throught",
-  "product-banner": "You need some tools ?",
-  "product-adver": "Out tools",
-  "actived": "Actived",
+  "contact": "Contact us",
+  "greeting-banner": "Welcome to our online shop",
+  "contact-throught": "Contact us through",
+  "product-banner": "You need some tools?",
+  "product-adver": "Our tools",
+  "actived": "Active",
   "disabled": "Disabled",
   "deleted": "Deleted",
   "1month": "1 month",
@@ -20,14 +20,14 @@
   "shipping-check": "Check if you need shipping",
   "buynow": "Buy Now",
   "your-order": "Your Order",
-  "submited-order": "You have submited",
+  "submited-order": "You have submitted",
   "login-header": "Log In",
   "username-label": "Username",
   "password-label": "Password",
-  "register-account": "Dont have account yet ?",
+  "register-account": "Don't have account yet?",
   "login-submit": "LogIn",
   "phonenumber-label": "Phone Number",
-  "login-account": "Already have account ?",
+  "login-account": "Already have account?",
   "register-submit": "Register",
   "list-tool": "List Tools",
   "list-key": "List Keys",
@@ -40,8 +40,8 @@
   "price-col": "Price",
   "status-col": "Status",
   "pending": "Pending",
-  "orderDate-col": "Order CreatedAt",
-  "get-full-order": "Get all order",
-  "get-pending": "Get pending order",
+  "orderDate-col": "Order Created At",
+  "get-full-order": "Get all orders",
+  "get-pending": "Get pending orders",
   "approve": "Approve"
 }
